--- a/ParseTemplate-Swift/Base.lproj/Main.storyboard
+++ b/ParseTemplate-Swift/Base.lproj/Main.storyboard
@@ -61,11 +61,19 @@
                                 <animations/>
                                 <state key="normal" title="Log in"/>
                                 <connections>
-                                    <action selector="logInButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="faF-7B-Fy1"/>
+                                    <action selector="loginButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bxE-1j-8ex"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="smM-T2-CT8">
+                                <rect key="frame" x="88" y="186" width="145" height="30"/>
+                                <animations/>
+                                <state key="normal" title="Log in with Facebook"/>
+                                <connections>
+                                    <action selector="loginButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="0er-7V-jOk"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="91s-Ti-Gre">
-                                <rect key="frame" x="82" y="186" width="157" height="30"/>
+                                <rect key="frame" x="82" y="224" width="157" height="30"/>
                                 <animations/>
                                 <state key="normal" title="Forgot your password?"/>
                                 <connections>
@@ -73,7 +81,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="weE-JG-Z4A">
-                                <rect key="frame" x="90" y="224" width="140" height="30"/>
+                                <rect key="frame" x="90" y="262" width="140" height="30"/>
                                 <animations/>
                                 <state key="normal" title="Create your account"/>
                                 <connections>
@@ -88,6 +96,8 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="emailTextField" destination="oNL-pi-ZU8" id="RlQ-MU-En1"/>
+                        <outlet property="facebookLoginButton" destination="smM-T2-CT8" id="OGh-r5-DAB"/>
+                        <outlet property="parseLoginButton" destination="TJF-Gb-Pvx" id="iJK-70-MtN"/>
                         <outlet property="passwordTextField" destination="OAp-5d-9HE" id="w43-gK-b1M"/>
                         <segue destination="Qjv-85-nRL" kind="presentation" identifier="fromLogInToSignUp" id="ixi-7G-Q8X"/>
                         <segue destination="xoN-gb-PT3" kind="presentation" identifier="fromLogInToMain" id="sle-GJ-NOn"/>
