--- a/ParseTemplate-Swift/Base.lproj/Main.storyboard
+++ b/ParseTemplate-Swift/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Main View Controller-->
@@ -167,29 +168,71 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D4T-Dg-5m4">
-                                <rect key="frame" x="20" y="72" width="280" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bj6-Wq-kEe">
-                                <rect key="frame" x="20" y="110" width="280" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bj6-Wq-kEe">
+                                <rect key="frame" x="20" y="128" width="280" height="30"/>
+                                <color key="tintColor" red="0.015686274510000001" green="0.1647058824" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="BWm-Cs-ump"/>
+                                    <constraint firstAttribute="width" constant="280" id="V9R-2q-kDh"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1VX-l6-ZXp" customClass="CheckBox" customModule="ParseTemplate_Swift" customModuleProvider="target">
-                                <rect key="frame" x="145" y="148" width="30" height="30"/>
-                                <state key="normal" title="M"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1VX-l6-ZXp" customClass="CheckBox" customModule="ParseTemplate_Swift" customModuleProvider="target">
+                                <rect key="frame" x="145" y="166" width="30" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="Ez9-Cg-VdG"/>
+                                    <constraint firstAttribute="height" constant="30" id="Umm-P4-BpW"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="M">
+                                    <color key="titleColor" red="0.015686274510000001" green="0.1647058824" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BYP-q3-TVC">
-                                <rect key="frame" x="20" y="186" width="280" height="30"/>
-                                <state key="normal" title="Create account"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oRq-Wo-tpk">
+                                <rect key="frame" x="0.0" y="248" width="320" height="320"/>
+                                <color key="backgroundColor" red="0.80000000000000004" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BYP-q3-TVC">
+                                <rect key="frame" x="20" y="204" width="280" height="36"/>
+                                <color key="backgroundColor" red="0.36862745098039218" green="0.69411764705882351" blue="0.74901960784313726" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="280" id="BDD-ev-BHO"/>
+                                    <constraint firstAttribute="height" constant="36" id="bTT-gU-kVy"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <state key="normal" title="Create account">
+                                    <color key="titleColor" red="0.015686274509803921" green="0.16470588235294117" blue="0.16862745098039217" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="signUpButtonTapped:" destination="YmA-8b-OJd" eventType="touchUpInside" id="1vz-xs-HCM"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email:" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="D4T-Dg-5m4">
+                                <rect key="frame" x="20" y="90" width="280" height="30"/>
+                                <color key="tintColor" red="0.015686274510000001" green="0.1647058824" blue="0.16862745100000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="280" id="72E-0I-Rfu"/>
+                                    <constraint firstAttribute="height" constant="30" id="c3e-6C-09T"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="0.80392156862745101" green="0.92941176470588238" blue="0.96470588235294119" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="D4T-Dg-5m4" firstAttribute="centerX" secondItem="H6G-qs-5mN" secondAttribute="centerX" id="3ev-0z-2ed"/>
+                            <constraint firstItem="H8s-I4-QeD" firstAttribute="top" secondItem="oRq-Wo-tpk" secondAttribute="bottom" id="ALl-Q9-G65"/>
+                            <constraint firstItem="BYP-q3-TVC" firstAttribute="centerX" secondItem="H6G-qs-5mN" secondAttribute="centerX" id="BCM-1t-osf"/>
+                            <constraint firstItem="Bj6-Wq-kEe" firstAttribute="centerX" secondItem="H6G-qs-5mN" secondAttribute="centerX" id="NIP-6t-DOI"/>
+                            <constraint firstItem="oRq-Wo-tpk" firstAttribute="leading" secondItem="H6G-qs-5mN" secondAttribute="leadingMargin" constant="-20" id="QAd-ep-Xe2"/>
+                            <constraint firstItem="1VX-l6-ZXp" firstAttribute="centerX" secondItem="H6G-qs-5mN" secondAttribute="centerX" id="SDh-B4-Ptc"/>
+                            <constraint firstItem="D4T-Dg-5m4" firstAttribute="top" secondItem="rSe-P4-L6P" secondAttribute="bottom" constant="26" id="W1q-5A-CGq"/>
+                            <constraint firstItem="1VX-l6-ZXp" firstAttribute="top" secondItem="Bj6-Wq-kEe" secondAttribute="bottom" constant="8" id="Wxm-PC-vQv"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="oRq-Wo-tpk" secondAttribute="trailing" constant="-20" id="aNC-so-Xrq"/>
+                            <constraint firstItem="Bj6-Wq-kEe" firstAttribute="top" secondItem="D4T-Dg-5m4" secondAttribute="bottom" constant="8" id="gNM-1x-Mcc"/>
+                            <constraint firstItem="BYP-q3-TVC" firstAttribute="top" secondItem="1VX-l6-ZXp" secondAttribute="bottom" constant="8" id="uT4-P7-yiX"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Sign up" id="3VP-7G-8Px">
                         <barButtonItem key="rightBarButtonItem" systemItem="cancel" id="ZBU-lp-GJK">
